<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="contents"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_1c1b21">

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/notosans_kr_bold"
            android:text="@string/review"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fl_review"
            tools:text="@string/review"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_review_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/notosans_kr_light"
            android:text="@string/message_review"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_review"
            app:layout_constraintStart_toEndOf="@+id/tv_review"
            app:layout_constraintTop_toTopOf="@+id/tv_review"
            tools:text="@string/message_review" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:padding="15dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_review_message"
            app:layout_constraintBottom_toBottomOf="@id/tv_review_message" />

        <FrameLayout
            android:id="@+id/fl_review"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_1c1b21_stroke_dadada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_review">

            <EditText
                android:id="@+id/edt_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@null"
                android:gravity="top"
                android:text="@={contents}"
                android:hint="@string/message_review"
                android:textColor="@color/white"
                android:textColorHint="@color/color_8e8f93"
                android:textSize="11sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/btn_send_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:clickable="@{TextUtils.isEmpty(contents) ? false : true}"
            android:focusable="@{TextUtils.isEmpty(contents) ? false : true}"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="22dp"
            android:text="@string/complete"
            android:textColor="@{TextUtils.isEmpty(contents) ? @color/color_8e8f93 : @color/butterscotch}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:backgroundTint="@color/black"
            tools:textColor="@color/color_8e8f93" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
